Displaying notes to response panels

--- a/app/assets/stylesheets/jobs.css.scss
+++ b/app/assets/stylesheets/jobs.css.scss
@@ -99,6 +99,17 @@
   margin-top: 4px;
 }
 
+.response-note {
+  padding: 5px 10px;
+  border-radius: 10px;
+  background-color: rgba(59, 175, 218, 0.25);
+  margin: 2px;
+}
+
+.panel-bottom {
+  margin-top: 15px;
+}
+
 /*************************
 Panels: Dropdown btn/icons
 *************************/
