--- a/app/assets/stylesheets/jobs.css.scss
+++ b/app/assets/stylesheets/jobs.css.scss
@@ -100,14 +100,25 @@
 }
 
 .response-note {
-  padding: 5px 10px;
-  border-radius: 10px;
+  padding: 4px 10px;
+  border-radius: 6px;
   background-color: rgba(59, 175, 218, 0.25);
-  margin: 2px;
+  margin: 2px 0px;
 }
 
 .panel-bottom {
   margin-top: 15px;
+}
+
+.close > span {
+
+
+}
+
+.alert-info {
+  letter-spacing: 1px !important;
+  padding: 2px 10px !important;
+  margin: 2px 0 !important;
 }
 
 /*************************
@@ -133,6 +144,10 @@ Panels: Dropdown btn/icons
 
 .fa-arrow-circle-left {
   background-color: #FC6E51;
+}
+
+.fa-plus-circle {
+  background-color: #48CFAD;
 }
 
 .dropdown-menu li:hover {
