Notes adding and dispalying properly, add note form toggling

--- a/app/assets/stylesheets/jobs.css.scss
+++ b/app/assets/stylesheets/jobs.css.scss
@@ -106,13 +106,12 @@
   margin: 2px 0px;
 }
 
-.panel-bottom {
-  margin-top: 15px;
+.add_note_form {
+  margin-bottom: 10px;
 }
 
-.close > span {
-
-
+.panel-bottom {
+  margin-top: 15px;
 }
 
 .alert-info {
