--- a/app/views/jobs/partials/_jobs.html.erb
+++ b/app/views/jobs/partials/_jobs.html.erb
@@ -47,7 +47,7 @@
           </div>
           <div class="modal-body">
             <h6>Located in <%= job.location %></h6>
-            <p><%= job.description %></p>
+            <p><%= simple_format(job.description) %></p>
           </div>
           <div class="modal-footer">
           </div>
