--- a/app/views/jobs/partials/_interview.html.erb
+++ b/app/views/jobs/partials/_interview.html.erb
@@ -37,7 +37,7 @@
               <button type="button" class="btn btn-default dropdown-toggle btn-sm" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fa fa-cog"></i>
               </button>
-              <ul class="dropdown-menu">
+              <ul class="dropdown-menu pull-right">
                 <li>
                   <a href="" class="toggleNoteForm"><i class="fa fa-plus-circle special-icon"></i>Add Note</a>
                 </li>
@@ -69,7 +69,7 @@
           </div>
           <div class="modal-body">
             <h6>Located in <%= job.location %></h6>
-            <p><%= job.description %></p>
+            <p><%= simple_format(job.description) %></p>
           </div>
           <div class="modal-footer">
           </div>
