Added all_jobs view page to display all jobs user has not applied for

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -14,8 +14,8 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Pipeline <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Jobs to Apply</a></li>
+        <li class="active"><a href="/welcome">Pipeline <span class="sr-only">(current)</span></a></li>
+        <li><a href="/all_jobs">Jobs to Apply</a></li>
         <li>
           <a href="#" data-toggle="modal" data-target="#myModal">Add Job</a>
         </li>
