--- a/app/views/jobs/all_jobs.html.erb
+++ b/app/views/jobs/all_jobs.html.erb
@@ -1,3 +1,5 @@
+<%= render 'layouts/nav' %>
+<%= render 'jobs/partials/add_job_modal' %>
 <% if @new_jobs.count < 1 %>
     <p class="text-center"><a href="#" data-toggle="modal" data-target="#myModal"><i class="fa fa-plus-square-o" style="font-size: 100px; color: rgba(158, 158, 158, 0.45)"></i></a></p>
 <% else %>
