--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
   <link href='https://fonts.googleapis.com/css?family=Work+Sans:400,200,300,600|Arvo:400,700' rel='stylesheet' type='text/css'>
 </head>
-<body class="<%= @home_page ? 'homepage' : '' %>">
+<body class="<%= @home_page ? 'homepage' : '' %><%= @all_jobs ? 'homepage' : '' %>">
   <%= yield %>
 </body>
 </html>
