Not sure, but app needs some work

--- a/app/views/jobs/partials/_interview.html.erb
+++ b/app/views/jobs/partials/_interview.html.erb
@@ -1,5 +1,5 @@
 <% if @interviews.count < 1 %>
-  <p class="text-center placeholder">They will come.</p>
+  <p class="text-center placeholder">Patience.</p>
 <% else %>
   <% @interviews.each do |job| %>
     <div class="panel panel-primary">
